--- a/trace/quarkus/serviceb/pom.xml
+++ b/trace/quarkus/serviceb/pom.xml
@@ -48,6 +48,14 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-opentracing</artifactId>
     </dependency>
+
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-jackson</artifactId>
+    </dependency>
+
+
   </dependencies>
   <build>
     <plugins>
